fix due to upgraded deps